# conch

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  config.example.toml  phase_c_docked_drag_snap.md  pom.xml
crates/conch_plugin/: Cargo.toml
crates/conch_plugin/src/: bus.rs  checker.rs  host_api.rs  jvm_stub.rs  lib.rs  manager.rs  runner.rs
crates/conch_plugin/src/api/: app.rs  crypto.rs  mod.rs  session.rs  ui.rs
crates/conch_plugin/src/jvm/: runtime.rs
crates/conch_plugin/src/lua/: api.rs  runner.rs
crates/conch_plugin/src/lua/api/: app.rs  mod.rs  session.rs  ui.rs
crates/conch_plugin/src/native/: lifecycle.rs  manager.rs
crates/conch_session/: Cargo.toml
crates/conch_session/src/: connector.rs  lib.rs  pty.rs  rsync.rs  sftp.rs  shell_integration.rs
crates/conch_session/src/ssh/: client.rs  mod.rs  proxy.rs  session.rs  tunnel.rs
crates/conch_tauri/: Cargo.toml  tauri.conf.json
crates/conch_tauri/capabilities/: default.json
crates/conch_tauri/frontend/: commands.js  file-icons.js  files-panel.js  index.html  keygen.js  notification-panel.js  pane-dnd.js  plugin-manager.js  plugin-widgets.js  settings.html  settings.js  split-pane.js  ssh-panel.js  titlebar.js  tool-window-manager.js  tunnel-manager.js
crates/conch_tauri/frontend/app/: backend-router.js  bootstrap.js  bridge-runtime.js  clipboard-runtime.js  command-palette-runtime.js  compose-runtime.js  config-runtime.js  context-menu-runtime.js  dialog-runtime.js  dragdrop-runtime.js  event-wiring-runtime.js  input-runtime.js  layout-runtime.js  main-runtime.js  manager-compose-runtime.js  manager-delegates-runtime.js  menu-actions.js  orchestration-runtime.js  pane-manager.js  plugin-runtime.js  shortcut-runtime.js  split-runtime.js  startup-runtime.js  state.js  tab-manager.js  terminal-runtime.js  tool-window-runtime.js  window-events-runtime.js
crates/conch_tauri/frontend/app/core/: commands.js  config-service.js  dialog-service.js  keyboard-router.js  keygen.js  layout-service.js  tauri-client.js
crates/conch_tauri/frontend/app/features/files/: actions.js  data-service.js  pane-store.js  (+2 more)
crates/conch_tauri/frontend/app/layout/: split-pane.js  tool-window-manager.js
crates/conch_tauri/frontend/app/panels/: files-panel.js  plugin-widgets.js  settings.js  ssh-panel.js  tmux-panel.js  tunnel-manager.js  vault.js
crates/conch_tauri/frontend/app/ui/: titlebar.js
crates/conch_tauri/frontend/styles/: base.css  dialogs.css  layout.css  panels.css  plugin-widgets.css  settings-window.css  tool-windows.css
crates/conch_tauri/frontend/types/: KeyboardShortcuts.ts  PluginSettingsSearchEntry.ts  PluginSettingsSection.ts  PluginViewInfo.ts  SavedLayout.ts
crates/conch_tauri/src/: cleanup.rs  commands.rs  fonts.rs  ipc.rs  lib.rs  menu.rs  platform.rs  pty.rs  pty_backend.rs  settings.rs  theme.rs  updater.rs  vault_commands.rs  watcher.rs  windows.rs
crates/conch_tauri/src/plugins/: mod.rs  permission_host_api.rs  tauri_host_api.rs
crates/conch_tauri/src/remote/: config.rs  known_hosts.rs  local_fs.rs  mod.rs  server_commands.rs  ssh.rs  ssh_commands.rs  tunnel.rs
crates/conch_tauri/src/tmux/: bridge.rs  events.rs  mod.rs
crates/conch_terminal/: Cargo.toml
crates/conch_terminal/src/: font.rs  lib.rs  size_info.rs
crates/conch_terminal/src/renderer/: atlas.rs  glyph_cache.rs  mod.rs  pipeline.rs  primitive.rs  program.rs
crates/conch_terminal/src/renderer/shaders/: rect.wgsl  text.wgsl
crates/conch_tmux/: Cargo.toml
crates/conch_tmux/src/: command.rs  connection.rs  lib.rs  parser.rs  protocol.rs  session.rs
(+197 files in other folders)
