[package]
name = "conch_tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Conch terminal emulator — Tauri/xterm.js UI"

[[bin]]
name = "conch"
path = "src/main.rs"

[lib]
name = "conch_tauri"
path = "src/lib.rs"

[dependencies]
conch_core = { workspace = true }
conch_plugin = { workspace = true }
conch_plugin_sdk = { workspace = true }
conch_remote = { workspace = true }
tauri = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
portable-pty = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
arboard = "3"

# SSH + SFTP
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2.1"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "p256"] }
async-trait = "0.1"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSLocale"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[package.metadata.generate-rpm]
assets = [
    { source = "../../target/release/conch", dest = "/usr/bin/conch", mode = "0755" },
]
