[package]
name = "conch_tmux"
version.workspace = true
edition.workspace = true
description = "Tmux control mode protocol library for Conch"

[dependencies]
log = { workspace = true }
portable-pty = "0.8"

[dependencies.serde]
workspace = true
optional = true

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
